--- a/workshop/index.html
+++ b/workshop/index.html
@@ -61,8 +61,8 @@
                                  </picture>
                               </figure>
                               <div class="card-body">
-                                 <h2 class="card-title text-lowercase">Module 1: Introduction to Conda</h2>
-                                 <p class="card-text">a project with a background image</p>
+                                 <h2 class="card-title text-lowercase">Module 1</h2>
+                                 <p class="card-text">Introduction to Conda</p>
                                  <div class="row ml-1 mr-1 p-0"> </div>
                               </div>
                            </div>
@@ -83,8 +83,8 @@
                                  </picture>
                               </figure>
                               <div class="card-body">
-                                 <h2 class="card-title text-lowercase">project 2</h2>
-                                 <p class="card-text">a project with a background image and giscus comments</p>
+                                 <h2 class="card-title text-lowercase">Module 2</h2>
+                                 <p class="card-text">Introduction to SLURM jobs</p>
                                  <div class="row ml-1 mr-1 p-0"> </div>
                               </div>
                            </div>
@@ -105,8 +105,8 @@
                                  </picture>
                               </figure>
                               <div class="card-body">
-                                 <h2 class="card-title text-lowercase">project 3</h2>
-                                 <p class="card-text">a project that redirects to another website</p>
+                                 <h2 class="card-title text-lowercase">SNP calling - part 1</h2>
+                                 <p class="card-text">From fastq to vcf</p>
                                  <div class="row ml-1 mr-1 p-0"> </div>
                               </div>
                            </div>
