--- a/workshop/index.html
+++ b/workshop/index.html
@@ -44,7 +44,7 @@
             </header>
             <article>
                <div class="projects">
-                  <h2 class="category">work</h2>
+                  <h2 class="category">Set-up and pre-analysis</h2>
                   <div class="grid">
                      <div class="grid-sizer"></div>
                      <div class="grid-item">
@@ -105,7 +105,7 @@
                                  </picture>
                               </figure>
                               <div class="card-body">
-                                 <h2 class="card-title text-lowercase">SNP calling - part 1</h2>
+                                 <h2 class="card-title text-lowercase">SNP calling: pre-analysis</h2>
                                  <p class="card-text">From fastq to vcf</p>
                                  <div class="row ml-1 mr-1 p-0"> </div>
                               </div>
@@ -113,7 +113,7 @@
                         </a>
                      </div>
                   </div>
-                  <h2 class="category">fun</h2>
+                  <h2 class="category">downstream analysis</h2>
                   <div class="grid">
                      <div class="grid-sizer"></div>
                      <div class="grid-item">
