rename module folders

--- a/workshop/index.html
+++ b/workshop/index.html
@@ -48,7 +48,28 @@
                   <div class="grid">
                      <div class="grid-sizer"></div>
                      <div class="grid-item">
-                        <a href="/workshop/Introduction to conda/">
+                        <a href="/workshop/0_Linux_recap">
+                           <div class="card hoverable">
+                              <figure>
+                                 <picture>
+                                    <source class="responsive-img-srcset" media="(max-width: 480px)" srcset="/assets/img/12-480.webp">
+                                    </source> 
+                                    <source class="responsive-img-srcset" media="(max-width: 800px)" srcset="/assets/img/12-800.webp">
+                                    </source> 
+                                    <source class="responsive-img-srcset" media="(max-width: 1400px)" srcset="/assets/img/12-1400.webp">
+                                    </source> <img src="/assets/img/12.jpg" width="auto" height="auto" alt="project thumbnail" onerror="this.onerror=null; $('.responsive-img-srcset').remove();"> 
+                                 </picture>
+                              </figure>
+                              <div class="card-body">
+                                 <h2 class="card-title text-lowercase">Recap</h2>
+                                 <p class="card-text">Introduction to Linux and the VSC environment</p>
+                                 <div class="row ml-1 mr-1 p-0"> </div>
+                              </div>
+                           </div>
+                        </a>
+                     </div>
+                     <div class="grid-item">
+                        <a href="/workshop/1_Introduction_to_Conda">
                            <div class="card hoverable">
                               <figure>
                                  <picture>
@@ -70,7 +91,7 @@
                      </div>
                      <div class="grid-sizer"></div>
                      <div class="grid-item">
-                        <a href="/workshop/Introduction to SLURM jobs/">
+                        <a href="/workshop/2_Introduction_to_SLURM_jobs/">
                            <div class="card hoverable">
                               <figure>
                                  <picture>
@@ -90,9 +111,13 @@
                            </div>
                         </a>
                      </div>
+                  </div>
+                  <h2 class="category">SNP Calling</h2>
+                  <div class="grid">
+                     <div class="grid-sizer"></div>
                      <div class="grid-sizer"></div>
                      <div class="grid-item">
-                        <a href="https://unsplash.com" rel="external nofollow noopener" target="_blank">
+                        <a href="/workshop/3_SNP_calling_fastq_to_vcf/">
                            <div class="card hoverable">
                               <figure>
                                  <picture>
@@ -105,45 +130,8 @@
                                  </picture>
                               </figure>
                               <div class="card-body">
-                                 <h2 class="card-title text-lowercase">SNP calling: pre-analysis</h2>
-                                 <p class="card-text">From fastq to vcf</p>
-                                 <div class="row ml-1 mr-1 p-0"> </div>
-                              </div>
-                           </div>
-                        </a>
-                     </div>
-                  </div>
-                  <h2 class="category">downstream analysis</h2>
-                  <div class="grid">
-                     <div class="grid-sizer"></div>
-                     <div class="grid-item">
-                        <a href="/projects/4_project/">
-                           <div class="card hoverable">
-                              <div class="card-body">
-                                 <h2 class="card-title text-lowercase">project 4</h2>
-                                 <p class="card-text">another without an image</p>
-                                 <div class="row ml-1 mr-1 p-0"> </div>
-                              </div>
-                           </div>
-                        </a>
-                     </div>
-                     <div class="grid-sizer"></div>
-                     <div class="grid-item">
-                        <a href="/projects/5_project/">
-                           <div class="card hoverable">
-                              <figure>
-                                 <picture>
-                                    <source class="responsive-img-srcset" media="(max-width: 480px)" srcset="/assets/img/1-480.webp">
-                                    </source> 
-                                    <source class="responsive-img-srcset" media="(max-width: 800px)" srcset="/assets/img/1-800.webp">
-                                    </source> 
-                                    <source class="responsive-img-srcset" media="(max-width: 1400px)" srcset="/assets/img/1-1400.webp">
-                                    </source> <img src="/assets/img/1.jpg" width="auto" height="auto" alt="project thumbnail" onerror="this.onerror=null; $('.responsive-img-srcset').remove();"> 
-                                 </picture>
-                              </figure>
-                              <div class="card-body">
-                                 <h2 class="card-title text-lowercase">project 5</h2>
-                                 <p class="card-text">a project with a background image</p>
+                                 <h2 class="card-title text-lowercase">Module 3</h2>
+                                 <p class="card-text">SNP Calling: From fastq to vcf</p>
                                  <div class="row ml-1 mr-1 p-0"> </div>
                               </div>
                            </div>
