--- a/workshop/1_Introduction_to_Conda/index.html
+++ b/workshop/1_Introduction_to_Conda/index.html
@@ -5,9 +5,9 @@
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <title>project 1 | You R. Name</title>
+      <title>Module 1 | Conda</title>
       <meta name="author" content="Sophie Colette">
-      <meta name="description" content="Introduction to Conda">
+      <meta name="description" content="Module 1: Introduction to Conda">
       <meta name="keywords" content="jekyll, jekyll-theme, academic-website, portfolio-website">
       <link rel="stylesheet" href="/assets/css/bootstrap.min.css?a4b3f509e79c54a512b890d73235ef04">
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/mdbootstrap@4.20.0/css/mdb.min.css" integrity="sha256-jpjYvU3G3N6nrrBwXJoVEYI/0zw8htfFnhT9ljN3JJw=" crossorigin="anonymous">
@@ -25,7 +25,7 @@
       <header>
          <nav id="navbar" class="navbar navbar-light navbar-expand-sm fixed-top">
             <div class="container">
-               <a class="navbar-brand title font-weight-lighter" href="/"><span class="font-weight-bold">You </span>R. Name</a> <button class="navbar-toggler collapsed ml-auto" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar top-bar"></span> <span class="icon-bar middle-bar"></span> <span class="icon-bar bottom-bar"></span> </button> 
+               <a class="navbar-brand title font-weight-lighter" href="/"><span class="font-weight-bold">Workshop </span>SNP calling on the VSC</a> <button class="navbar-toggler collapsed ml-auto" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar top-bar"></span> <span class="icon-bar middle-bar"></span> <span class="icon-bar bottom-bar"></span> </button> 
                <div class="collapse navbar-collapse text-right" id="navbarNav">
                   <ul class="navbar-nav ml-auto flex-nowrap">
                      <li class="nav-item "> <a class="nav-link" href="/">about</a> </li>
