fix introduction header

--- a/workshop/index.html
+++ b/workshop/index.html
@@ -44,7 +44,7 @@
             </header>
             <article>
                <div class="projects">
-                  <h2 class="category">Set-up and pre-analysis</h2>
+                  <h2 class="category">Introduction</h2>
                   <div class="grid">
                      <div class="grid-sizer"></div>
                      <div class="grid-item">
